laborations/old-2018-lab1/testsuite/bad/decl-const-const-in-main.cc
int main(const const int i) {}
